[package]
name = "extension-searcher"
version = "0.1.0"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
clap = {version = "2.33.1", features = ["color", "wrap_help", "suggestions"]}
